# conlang_database

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
crates/conlang_database_types/: Cargo.toml
crates/conlang_types/: Cargo.toml
crates/src/: schema.rs
extras/: docker-compose.yml
migrations/: 20210413161447_all.sql
migrations/all/: down.sql  up.sql
services/conlang_database_auth/: .env  Cargo.toml
src/: Conlang Database - Conlang Table.csv  config.rs  main.rs  models.rs  queries.rs  requests.rs  schema.rs
src/db/: conlang.rs  full.rs  group.rs  mod.rs  person.rs  script.rs
src/routes/: mod.rs
src/routes/rest/: conlangs.rs  groups.rs  mod.rs  persons.rs  scripts.rs
