[package]
name = "conlang_database_auth"
version = "0.1.0"
authors = ["Sebastian <Sebastian@Strobl.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= "=4.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-cors = "=0.6.0-beta.1"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1.1.1", features = ["postgres"] }